--- a/style/style.css
+++ b/style/style.css
@@ -32,18 +32,15 @@ body {
   max-width: 1110px;
   margin: auto;
   padding: 0 15px;
-  box-sizing: content-box;
 }
 .displayFlexRow {
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
   display: flex;
   justify-content: space-between;
-  flex-direction: row;
 }
-.b-toBottom {
+.justifyContentStart {
+  justify-content: flex-start;
+}
+.scrollToNext {
   position: absolute;
   z-index: 99;
   bottom: 0;
@@ -51,7 +48,7 @@ body {
   width: 100%;
   height: 90px;
 }
-.b-toBottom::after {
+.scrollToNext::after {
   content: '>';
   position: absolute;
   top: 50%;
@@ -61,7 +58,7 @@ body {
   color: #fff;
   cursor: pointer;
 }
-.b-toBottom::before {
+.scrollToNext::before {
   content: '';
   position: absolute;
   display: block;
@@ -84,6 +81,9 @@ body {
   bottom: 0;
   height: 3px;
   background: #517398;
+}
+.header__logo {
+  margin-right: 50px;
 }
 .nav {
   align-self: center;
@@ -129,9 +129,8 @@ body {
 }
 .home {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 134px);
   padding-top: 60px;
-  padding-bottom: 20px;
   background: url('../img/Capa%201.jpg') center no-repeat;
   background-size: cover;
 }
@@ -152,7 +151,8 @@ body {
 .home__col-right {
   width: 100%;
   max-width: 326px;
-  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-bottom: 200px;
   align-self: baseline;
   font-family: 'Lato-Regular';
   color: #8c8c8b;
@@ -411,12 +411,13 @@ body {
 .services__item {
   width: 100%;
   max-width: 350px;
+  align-self: baseline;
   margin-bottom: 20px;
   font-family: 'Lato-Regular';
   list-style-type: none;
 }
 .services__item:nth-child(2) {
-  margin: 0 20px;
+  margin: 0 20px 20px;
 }
 .services__item-ttl {
   margin: 20px 0 30px;
@@ -497,7 +498,6 @@ body {
   background: #e64382;
 }
 .start__block-top {
-  box-sizing: border-box;
   padding: 10px;
   margin: auto;
   margin-bottom: 50px;
@@ -513,6 +513,7 @@ body {
   padding-bottom: 50px;
 }
 .start .form__group {
+  position: relative;
   min-width: calc((100% - 30px) / 2);
   margin-bottom: 25px;
 }
@@ -580,10 +581,6 @@ body {
 .comments {
   background: #f6f5f1;
 }
-.comments__col-left,
-.comments__col-right {
-  display: inline-block;
-}
 .comments__col-left {
   width: 100%;
   max-width: 734px;
@@ -593,7 +590,6 @@ body {
 .comments__col-right {
   max-width: 350px;
   width: 100%;
-  margin-bottom: 32px;
 }
 .comments__ttl {
   padding: 16px 0;
@@ -605,6 +601,7 @@ body {
   display: inline-block;
   width: calc((100% - 32px) / 2);
   max-width: 351px;
+  min-width: 272px;
   margin: 30px 28px 30px 0;
   vertical-align: text-top;
 }
@@ -781,13 +778,6 @@ body {
   right: -12px;
 }
 @media screen and (max-width: 992px) {
-  .displayFlexRow {
-    flex-flow: wrap;
-  }
-  .displayFlexRow * {
-    margin-right: auto;
-    margin-left: auto;
-  }
   .header__logo {
     margin-left: 0;
   }
@@ -818,9 +808,13 @@ body {
   .home {
     height: auto;
   }
-  .comments__col-left,
-  .comments__col-right {
+  .comments__col-left {
     max-width: 100%;
+  }
+  .comments .comments__item {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   .comments__counter {
     margin-top: 50px;
@@ -830,16 +824,28 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .displayFlexRow {
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .header .container {
+    justify-content: flex-start;
+  }
+  .header .nav {
+    margin: 10px 0;
+  }
   .home__text {
     font-size: 45px;
-  }
-  .home__col-left {
-    max-width: 100vw;
-    font-size: 40px;
   }
   .home__col-right {
     margin-left: auto;
     margin-right: auto;
+  }
+  .home__col-left {
+    max-width: 458px;
+    font-size: 40px;
+    padding: 0 20px 0;
   }
   .experience__text {
     font-size: 40px;
@@ -853,16 +859,31 @@ body {
   .services__ttl {
     font-size: 36px;
   }
+  .comments__col-left {
+    margin-right: 0;
+  }
+  .comments__col-right {
+    max-width: 100%;
+  }
+  .comments__col-right .comments__counter {
+    margin: 5% auto;
+  }
+  .comments .comments__item {
+    display: inline-block;
+  }
   .contact .form__btn-contact {
     font-size: 22px;
   }
 }
 @media (max-width: 576px) {
-  .b-toBottom {
+  .scrollToNext {
     height: 60px;
   }
+  .header .nav__list {
+    padding: 0;
+  }
   .home__text {
-    font-size: 30px;
+    font-size: 35px;
   }
   .home__col-right {
     margin-bottom: 80px;
@@ -872,14 +893,22 @@ body {
     width: 100%;
     max-width: 100%;
   }
+  .comments .comments__item {
+    display: block;
+  }
   .comments__item {
     width: 100%;
-    max-width: 100%;
+    max-width: 351px;
+    min-width: auto;
   }
-  .comments__counter {
-    margin-top: 7%;
+  .comments__item:not(:first-of-type) {
+    margin-top: 0;
   }
   .contact .form__btn-contact {
     font-size: 18px;
+  }
+  .services__item:nth-child(2) {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
