--- a/style/style.less
+++ b/style/style.less
@@ -39,6 +39,7 @@
 
 .clearfix {
     position: relative;
+
     &::after {
         content: '';
         display: block;
@@ -60,21 +61,19 @@ body {
     max-width: 1110px;
     margin: auto;
     padding: 0 15px;
-    box-sizing: content-box;
 
 }
 
 .displayFlexRow {
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
 }
 
-.b-toBottom {
+.justifyContentStart {
+    justify-content: flex-start;
+}
+
+.scrollToNext {
     position: absolute;
     z-index: 99;
     bottom: 0;
@@ -120,6 +119,10 @@ body {
         bottom: 0;
         height: 3px;
         background: @mainColor;
+    }
+
+    &__logo {
+        margin-right: 50px;
     }
 }
 
@@ -176,9 +179,8 @@ body {
 
 .home {
     position: relative;
-    min-height: 100vh;
+    min-height: ~'calc(100vh - 134px)';
     padding-top: 60px;
-    padding-bottom: 20px;
     background: url('../img/Capa%201.jpg') center no-repeat;
     background-size: cover;
     //    background-size: 100% auto;
@@ -203,7 +205,8 @@ body {
     &__col-right {
         width: 100%;
         max-width: 326px;
-        margin-bottom: 20px;
+        margin-left: 20px;
+        margin-bottom: 200px;
         align-self: baseline;
         font-family: @LatoRegular;
         color: @darkGreyColor;
@@ -426,7 +429,7 @@ body {
     background: @mainColor;
 
     &__text {
-        font: 50px/1.4  @LatoHairlineItalic;
+        font: 50px/1.4 @LatoHairlineItalic;
     }
 
     &__ttl {
@@ -505,9 +508,11 @@ body {
 
 .services {
     text-align: center;
+
     &__list {
         margin-bottom: 25px;
     }
+
     &__text-top {
         padding: 34px 0;
         margin-bottom: 70px;
@@ -536,12 +541,15 @@ body {
     &__item {
         width: 100%;
         max-width: 350px;
+        align-self: baseline;
         margin-bottom: 20px;
         font-family: @LatoRegular;
         list-style-type: none;
+
         &:nth-child(2) {
-            margin: 0 20px;
+            margin: 0 20px 20px;
         }
+
         &-ttl {
             margin: 20px 0 30px;
             font: 18px/1.5 @LatoBold;
@@ -641,11 +649,9 @@ body {
     }
 
     &__block-top {
-        box-sizing: border-box;
         padding: 10px;
         margin: auto;
         margin-bottom: 50px;
-
         max-width: 352px;
         height: 60px;
         font: 30px @LatoBold;
@@ -660,6 +666,8 @@ body {
     }
 
     .form__group {
+        position: relative;
+
         min-width: ~'calc((100% - 30px) / 2)';
         margin-bottom: 25px;
 
@@ -705,13 +713,13 @@ body {
 
     .select2-selection__rendered,
     .select2-results__option {
-        color: @mainColor !important;
+        color: @mainColor  !important;
     }
 
     .select2-container {
         width: 100%;
     }
-    
+
     .select2-dropdown {
         border: none;
         overflow: hidden;
@@ -752,10 +760,6 @@ body {
 .comments {
     background: #f6f5f1;
 
-    &__col-left,
-    &__col-right {
-        display: inline-block;
-    }
 
     &__col-left {
         width: 100%;
@@ -767,7 +771,6 @@ body {
     &__col-right {
         max-width: 350px;
         width: 100%;
-        margin-bottom: 32px;
 
     }
 
@@ -782,6 +785,7 @@ body {
         display: inline-block;
         width: calc((100% - 32px) / 2);
         max-width: 351px;
+        min-width: 272px;
         margin: 30px 28px 30px 0;
         vertical-align: text-top;
 
@@ -853,6 +857,7 @@ body {
         display: none;
         margin-top: 35px;
         color: @darkGreyColor;
+
         &::after {
             content: '';
             display: block;
@@ -1009,12 +1014,9 @@ body {
 
 @media screen and (max-width: 992px) {
     .displayFlexRow {
-        flex-flow: wrap;
-
-        * {
-            margin-right: auto;
-            margin-left: auto;
-        }
+        //        flex-flow: row wrap;
+        //        align-items: center;
+        //        justify-content: center;
     }
 
     .header__logo {
@@ -1058,57 +1060,116 @@ body {
 
     .comments {
 
-        &__col-left,
-        &__col-right {
+        &__col-left {
             max-width: 100%;
 
+
+        }
+
+
+
+        .comments__item {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         &__counter {
             margin-top: 50px;
         }
     }
+
     .experience {
         &__list {
             justify-content: center;
         }
     }
+
+    //   
 }
 
 @media screen and (max-width: 768px) {
+
+    .displayFlexRow {
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header {
+        .container {
+            .justifyContentStart
+        }
+
+        .nav {
+            margin: 10px 0;
+        }
+
+    }
+
     .home {
 
         &__text {
             font-size: 45px;
         }
 
+        &__col-right {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &__col-left {
+            max-width: 458px;
+            font-size: 40px;
+
+            padding: 0 20px 0;
+        }
     }
 
-    .home__col-left {
-        max-width: 100vw;
-        font-size: 40px;
-    }
 
-    .home__col-right {
-        margin-left: auto;
-        margin-right: auto;
-    }
+
+
     .experience {
         &__text {
             font-size: 40px;
         }
+
         &__ttl {
             font-size: 45px;
         }
     }
+
     .services {
         &__text-top {
             font-size: 28px;
         }
+
         &__ttl {
             font-size: 36px;
         }
+
     }
+
+    .comments {
+        &__col-left {
+            margin-right: 0;
+        }
+
+        &__col-right {
+            max-width: 100%;
+
+        }
+
+        &__col-right .comments__counter {
+            margin: 5% auto;
+
+        }
+
+        .comments__item {
+            display: inline-block;
+        }
+    }
+
     .contact {
         .form__btn-contact {
             font-size: 22px;
@@ -1117,13 +1178,21 @@ body {
 }
 
 @media (max-width: 576px) {
-    .b-toBottom {
+    .scrollToNext {
         height: 60px;
     }
+
+    .header {
+        .nav__list {
+            padding: 0;
+        }
+    }
+
     .home {
         &__text {
-            font-size: 30px;
+            font-size: 35px;
         }
+
         &__col-right {
             margin-bottom: 80px;
         }
@@ -1137,18 +1206,36 @@ body {
     }
 
     .comments {
+
+     .comments__item {
+            display: block;
+        }
         &__item {
             width: 100%;
-            max-width: 100%;
+            max-width: 351px;
+            min-width: auto;
+
         }
 
-        &__counter {
-            margin-top: 7%;
+        &__item:not(:first-of-type) {
+            margin-top: 0;
+
         }
+
+
     }
+
     .contact {
         .form__btn-contact {
             font-size: 18px;
         }
     }
+
+    .services {
+        &__item:nth-child(2) {
+            margin-right: auto;
+            margin-left: auto;
+        }
+    }
+
 }
