--- a/style/style.less
+++ b/style/style.less
@@ -22,20 +22,33 @@
 
 
 * {
+    box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
     margin: 0;
     padding: 0;
-    bottom: 0;
-    user-select: none;
-    box-sizing: border-box;
+}
+
+ul,
+ol {
+    list-style-type: none;
 }
 
 .border-radius {
     border-radius: 5px;
 }
 
-.bgColor {
-    background: @mainColor;
-}
 
 .clearfix {
     position: relative;
@@ -49,8 +62,7 @@
 
 html,
 body {
-    min-height: 100%;
-
+    height: 100%;
 }
 
 body {
@@ -107,23 +119,14 @@ body {
 }
 
 .header {
-    position: relative;
     padding: 23px 0 20px;
     background: #fff;
+    border-bottom: 3px solid @mainColor;
 
-    &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        height: 3px;
-        background: @mainColor;
+    .logo__img {
+        display: block;
     }
 
-    &__logo {
-        margin-right: 50px;
-    }
 }
 
 .nav {
@@ -181,9 +184,9 @@ body {
     position: relative;
     min-height: ~'calc(100vh - 134px)';
     padding-top: 60px;
+    padding-bottom: 90px;
     background: url('../img/Capa%201.jpg') center no-repeat;
     background-size: cover;
-    //    background-size: 100% auto;
 
     &__wrap {
         display: -webkit-flex;
@@ -195,19 +198,22 @@ body {
         flex-direction: row;
     }
 
-    &__col-left {
+    &__col-left,
+    &__col-right {
         width: 100%;
-        max-width: 538px;
         margin-bottom: 30px;
+
+    }
+
+    &__col-left {
+        max-width: 538px;
     }
 
 
     &__col-right {
-        width: 100%;
         max-width: 326px;
         margin-left: 20px;
-        margin-bottom: 200px;
-        align-self: baseline;
+        margin-bottom: 40px;
         font-family: @LatoRegular;
         color: @darkGreyColor;
 
@@ -254,14 +260,6 @@ body {
             clear: both;
         }
 
-
-
-        //        &:nth-of-type(1)::before {
-        //            content: '';
-        //            display: block;
-        //            clear: both;
-        //        }
-
         &:last-child {
             display: block;
             margin-top: 8px;
@@ -293,12 +291,6 @@ body {
         }
 
     }
-
-    //    &__text-accent + &__text-accent {
-    //            margin-top: 8px;
-    //            padding-left: 0;
-    //            line-height: 1;
-    //        }
 
     &__text-accent + &__text-accent::before {
         display: block;
@@ -394,13 +386,10 @@ body {
 
     }
 
-
-
     .form__check * {
         display: inline-block;
 
     }
-
 
     &-button {
         padding: 15px;
@@ -416,14 +405,12 @@ body {
         background: @accentColor;
         cursor: pointer;
     }
-
-
 }
 
 .experience {
     position: relative;
     min-height: 100vh;
-    padding: 65px 0;
+    padding: 65px 0 90px;
     color: #fff;
     text-align: center;
     background: @mainColor;
@@ -445,7 +432,6 @@ body {
         display: flex;
         flex-flow: wrap;
         justify-content: space-between;
-        list-style-type: none;
         margin-bottom: 40px;
     }
 
@@ -558,7 +544,6 @@ body {
         &-top {
             position: relative;
             height: 200px;
-            margin-bottom: 20px;
             background: @lightGreyColor;
             border-radius: 10px;
             border: 10px solid;
@@ -649,11 +634,10 @@ body {
     }
 
     &__block-top {
-        padding: 10px;
+        padding: 12px;
         margin: auto;
         margin-bottom: 50px;
         max-width: 352px;
-        height: 60px;
         font: 30px @LatoBold;
         text-transform: capitalize;
         text-align: center;
@@ -669,7 +653,6 @@ body {
         position: relative;
 
         min-width: ~'calc((100% - 30px) / 2)';
-        margin-bottom: 25px;
 
         &:first-of-type {
             margin-right: 26px;
@@ -677,6 +660,8 @@ body {
 
         &:not(:last-of-type) {
             display: inline-block;
+                    margin-bottom: 25px;
+
         }
 
 
@@ -694,10 +679,6 @@ body {
         width: 100%;
         cursor: pointer;
     }
-
-    //    .form__select {
-    //        position: relative;
-    //    }
 
     .form__search,
     .form__select,
@@ -836,7 +817,7 @@ body {
         padding: 35px 30px 40px 80px;
         border-radius: 10px;
         color: @lightenGreyColor;
-        font-SIZE: 14px;
+        font-size: 14px;
         line-height: 1.32;
 
         &::before {
@@ -1020,7 +1001,7 @@ body {
     }
 
     .header__logo {
-        margin-left: 0;
+        margin-right: 50px;
     }
 
     .nav {
@@ -1048,15 +1029,9 @@ body {
     }
 
     .container {
-        max-width: 100%;
         padding: 0 10px;
     }
 
-
-
-    .home {
-        height: auto;
-    }
 
     .comments {
 
@@ -1175,6 +1150,9 @@ body {
             font-size: 22px;
         }
     }
+    .footer .container.displayFlexRow {
+        justify-content: space-between;
+    }
 }
 
 @media (max-width: 576px) {
@@ -1189,15 +1167,22 @@ body {
     }
 
     .home {
+        padding-top: 40px;
+        padding-bottom: 60px;
+
         &__text {
             font-size: 35px;
         }
 
-        &__col-right {
-            margin-bottom: 80px;
-        }
+       
     }
+    .experience {
+                padding: 50px 0 60px;
+        &__ttl {
+            margin: 30px 0 45px;
+        }
 
+    }
     .container .form__group:not(:last-of-type) {
         display: block;
         width: 100%;
@@ -1207,9 +1192,10 @@ body {
 
     .comments {
 
-     .comments__item {
+        .comments__item {
             display: block;
         }
+
         &__item {
             width: 100%;
             max-width: 351px;
