--- a/style/style.less
+++ b/style/style.less
@@ -660,7 +660,7 @@ body {
 
         &:not(:last-of-type) {
             display: inline-block;
-                    margin-bottom: 25px;
+            margin-bottom: 25px;
 
         }
 
@@ -1150,12 +1150,17 @@ body {
             font-size: 22px;
         }
     }
+
     .footer .container.displayFlexRow {
         justify-content: space-between;
     }
 }
 
 @media (max-width: 576px) {
+    .container {
+        padding: 0 15px;
+    }
+
     .scrollToNext {
         height: 60px;
     }
@@ -1174,15 +1179,18 @@ body {
             font-size: 35px;
         }
 
-       
+
     }
+
     .experience {
-                padding: 50px 0 60px;
+        padding: 50px 0 60px;
+
         &__ttl {
             margin: 30px 0 45px;
         }
 
     }
+
     .container .form__group:not(:last-of-type) {
         display: block;
         width: 100%;
@@ -1208,6 +1216,10 @@ body {
 
         }
 
+        &__col-right .comments__counter {
+            margin: 10% auto;
+
+        }
 
     }
 
@@ -1224,4 +1236,36 @@ body {
         }
     }
 
+
+}
+
+@media (max-width: 376px) {
+    .services {
+        &__item {
+            max-width: 200px;
+            min-width: 200px;
+
+
+        }
+
+        &__item:first-child .services__item-top::before {
+            max-width: 74%;
+        }
+
+        &__item-top {
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+    }
+
+    .footer {
+        &__address {
+            margin-bottom: 10px;
+        }
+
+        .container.displayFlexRow {
+            justify-content: center;
+        }
+    }
 }
