--- a/style/style.less
+++ b/style/style.less
@@ -65,7 +65,19 @@ ol {
 	font-size: clamp(30px * @size, 5.12vw * @size, 60px * @size);
 }
 
-
+.arrow(@bdColor, @size) {
+	content: '';
+	position: absolute;
+	margin: auto;
+	height: @size;
+	width: @size;
+	top: 0;
+	bottom: calc((100% - @size) / 2);
+	transform: rotate(45deg);
+	border: @size / 6 solid @bdColor;
+	border-top: none;
+	border-left: none;
+}
 
 
 html,
@@ -105,16 +117,11 @@ body {
 	left: 0;
 	width: 100%;
 	height: 90px;
+	color: #fff;
 
 	&::after {
-		content: '>';
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		font: 80px/0 monospace;
-		transform: translate(-50%, -50%) rotate(90deg);
-
-		color: #fff;
+		.arrow(#fff, 40px);
+		left: calc((100% - 40px) / 2);
 		cursor: pointer;
 	}
 
@@ -129,6 +136,7 @@ body {
 		background: @semiOpacity;
 
 	}
+
 }
 
 .header {
@@ -219,7 +227,7 @@ body {
 	}
 
 	&__col-left {
-		max-width: clamp(200px,50%, 535px);
+		max-width: clamp(200px, 50%, 535px);
 	}
 
 
@@ -503,7 +511,7 @@ body {
 		padding: 34px 0;
 		margin-bottom: 70px;
 		font: 30px @LatoItalic;
-		.fontSize(.5);
+		.fontSize(.65);
 		text-transform: capitalize;
 		background: @accentColor;
 		color: #fff;
@@ -518,7 +526,7 @@ body {
 	&__ttl {
 		margin-bottom: 50px;
 		font: 40px @LatoItalic;
-		.fontSize(0.667);
+		.fontSize(0.75);
 
 		&-b {
 			font-family: @LatoBoldItalic;
@@ -566,12 +574,11 @@ body {
 			background: #fff;
 		}
 
-		&-top:nth-of-type(1)::after {
-			content: '>';
-			font: 100px/1 monospace;
+		&:nth-of-type(1) &-top::after {
+						.arrow(@mainColor, 40px);
+
 			top: 20%;
 			left: ~'calc((100% - 30px) / 2)';
-			transform: rotate(90deg);
 		}
 	}
 
@@ -714,16 +721,10 @@ body {
 	}
 
 	.select2-selection__arrow {
-		position: relative;
 
 		&::after {
-			content: '>';
-			top: 50%;
+			.arrow(@mainColor, 1em);
 			right: 10px;
-			position: absolute;
-			transform: rotate(90deg) translateX(-50%);
-			font: 40px/1 monospace;
-			color: @mainColor;
 		}
 	}
 
@@ -1032,7 +1033,7 @@ body {
 	}
 
 	.home__col-left {
-//		font-size: 50px;
+		//		font-size: 50px;
 	}
 
 	.container {
@@ -1074,8 +1075,19 @@ body {
 
 	.displayFlexRow {
 		flex-flow: row wrap;
-//		align-items: center;
+		//		align-items: center;
 		justify-content: center;
+	}
+
+	.scrollToNext {
+		height: 75px;
+
+		&::after {
+			bottom: calc((100% - 35px) / 2);
+			left: calc((100% - 35px) / 2);
+			height: 35px;
+			width: 35px;
+		}
 	}
 
 	.header {
@@ -1102,8 +1114,6 @@ body {
 
 		&__col-left {
 			max-width: ~'max(50vw, 358px)';
-//			font-size: 40px;
-
 			padding: 0 20px 0;
 		}
 	}
@@ -1145,13 +1155,21 @@ body {
 }
 
 @media (max-width: 576px) {
+	.scrollToNext {
+		height: 50px;
+
+		&::after {
+			bottom: calc((100% - 20px) / 2);
+			left: calc((100% - 20px) / 2);
+			height: 20px;
+			width: 20px;
+		}
+	}
+
 	.container {
 		padding: 0 15px;
 	}
 
-	.scrollToNext {
-		height: 60px;
-	}
 
 	.header {
 		.nav__list {
@@ -1230,6 +1248,7 @@ body {
 	.home__col-left {
 		padding: 0;
 	}
+
 	.services {
 		&__item {
 			max-width: 200px;
